
2003-08-25	Joel Becker <joel.becker@oracle.com>

	* Makefile: Add rhel3 targets.
	* configure.in: Add rhel3 specfile.
	* kernel/Makefile: Add hugemem target.
	* redhat/Makefile: Add rhel3 specfile.
	* redhat/osm-2.4.21-EL.spec.in: Added.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: Support 'hugemem'.
	* kernel/osm.c: Lots of logging.  UNITED_LINUX->UNITEDLINUX.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* kernel/Makefile: s/ocfs/osm bug.
	* redhat/osm-2.4.9-e.spec.in: Make it work.
	* test/osmprofile: Remove wrapper.
	* tools/Makefile: osmtool in sbin.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* configure.in: Add RPM_VERSION.
	* Config.make.in: Add RPM_VERSION.
	* Makefile: Add RHAS srpm and rpm rules.
	* test/{osmtest,osmtest-multi}: Remove wrappers.
	* test/Makefile: Make osmtest and osmtest-multi build with
		-rpath.

2003-08-25	Joel Becker <joel.becker@oracle.com>

	* redhat/ocfs.init: Modernize based on ocfs lessons.

2003-08-22	Joel Becker <joel.becker@oracle.com>

	* redhat/Makefile: Added.
	* Makefile: Add redhat subdir.
	* include/linux/Makefile: Add osmcompat32.h.

2003-08-22	Joel Becker <joel.becker@oracle.com>

	* include/osmlib.h: Latest drop from 10g.
	* include/osmabi.h: Pad struct osmio to 64bit size.
	* include/osmerror.h: Silly capitalization.
	* test/osmtest-multi.c: Remove OSM_API_STUB bits.
	* test/osmtest.c: Remove OSM_API_STUB, remove intr argument
		from osm_io() calls.
	* test/sizes.c: Add x86-64.
	* libosm/osmlib.c: Remove posted calls.  Error on
		OSM_WAIT/waitlen bits.  Remove intr from osm_io().
	* include/linux/osmabi.h: Remove intr argument and add pad.
	* include/linux/osmkernel.h: Propagate osmlib.h alignment
		changes.
	* kernel/osm.c: Remove link_osm_ioc from promote call.

2003-08-20	Joel Becker <joel.becker@oracle.com>

	* include/linux/osmkernel.h: Add pad for 32->64.
	* include/osmlib.h: Add pad for 32->64.
	* kernel/osm.c: Debug logging for 32->64.
