@@ -43,6 +43,9 @@ DEFS = @DEFS@
 
 MCMODEL = @MCMODEL@
 
+TOOLSARCH = @TOOLSARCH@
+MODULEARCH = @MODULEARCH@
+
 KERNELDIR = @KERNELDIR@
 KERNELINC = $(KERNELDIR)/include
 KERNELVER = @KERNELVER@
