@@ -60,6 +60,54 @@ esac
 
 AC_SUBST(MCMODEL)
 
+AC_MSG_CHECKING(build architectures)
+TOOLSARCH=
+if test -f /etc/redhat-release
+then
+    RPMARCH="`rpm -qf /etc/redhat-release --queryformat \"%{ARCH}\"`"
+    if test -n "$RPMARCH" -a "$RPMARCH" != "noarch"
+    then
+        TOOLSARCH="$RPMARCH"
+    fi
+fi
+if test -z "$TOOLSARCH"
+then
+    case "$host_cpu" in
+    x86_64|i386|ppc|ia64)
+        TOOLSARCH="$host_cpu"
+        ;;
+    i686|i586|i486)
+        TOOLSARCH="i386"
+        ;;
+    ppc64|ppciseries|ppcpseries|ppc64iseries|ppc64pseries|powerpc|powerpc64)
+        TOOLSARCH="ppc"
+        ;;
+    *)
+        AC_MSG_RESULT([not found])
+        AC_MSG_ERROR([invalid or unsupported CPU type])
+        ;;
+    esac
+fi
+case "$TOOLSARCH" in
+x86_64|ia64)
+    MODULEARCH="$TOOLSARCH"
+    ;;
+ppc)
+    MODULEARCH="$host_cpu"
+    ;;
+i386)
+    MODULEARCH="i686"
+    ;;
+*)
+    AC_MSG_RESULT([not found])
+    AC_MSG_RESULT([invalid or unsupported kernel CPU type])
+    ;;
+esac
+AC_MSG_RESULT([${MODULEARCH}, ${TOOLSARCH}])
+AC_SUBST(MODULEARCH)
+AC_SUBST(TOOLSARCH)
+    
+
 if test "x$GCC" != "xyes"; then
   AC_MSG_ERROR(GCC is required)
 fi
